@@ -16,6 +16,8 @@ Features added
 Bugs fixed
 ----------
 
+* #8870: The style of toctree captions has been changed with docutils-0.17
+
 Testing
 --------
 
